@@ -1,3 +1,8 @@
+2005-10-13  Jakub Jelinek  <jakub@redhat.com>
+
+	* resolve.c (resolve_symbol): Don't error if a threadprivate module
+	variable isn't SAVEd.
+
 2005-10-12  Jakub Jelinek  <jakub@redhat.com>
 
 	* trans-openmp.c (gfc_trans_omp_do): Put count into BLOCK, not BODY.
