@@ -4484,7 +4484,10 @@ resolve_symbol (gfc_symbol * sym)
 
   /* Check threadprivate restrictions.  */
   if (sym->attr.threadprivate && !sym->attr.save
-      && (!sym->attr.in_common || sym->module != NULL))
+      && (!sym->attr.in_common
+          && sym->module == NULL
+          && (sym->ns->proc_name == NULL
+              || sym->ns->proc_name->attr.flavor != FL_MODULE)))
     gfc_error ("Threadprivate at %L isn't SAVEd", &sym->declared_at);
 }
 
