@@ -1,3 +1,7 @@
+2005-10-13  Jakub Jelinek  <jakub@redhat.com>
+
+	* gfortran.dg/gomp/omp_threadprivate2.f90: New test.
+
 2005-10-12  Richard Henderson  <rth@redhat.com>
 
 	* g++.dg/dg.exp: Don't run gomp tests.
